update to spring boot 3.4.3

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>de.fred4jupiter.fredbet</groupId>
     <artifactId>fredbet</artifactId>
-    <version>4.1.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <packaging>jar</packaging>
 
@@ -37,6 +37,7 @@
     </scm>
 
     <properties>
+        <revision>4.1.1-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
         <buildtimestamp>${maven.build.timestamp}</buildtimestamp>
