--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,22 @@
 name: Build and Test
 
 on:
+  workflow_call:
+    inputs:
+      maven_command:
+        required: true
+        type: string
+        default: 'mvn -B verify'
+#    secrets:
+#      personal_access_token:
+#        required: true
   push:
     branches:
-      - '*'
-      - '!dev'
-      - '!master'
+      - 'bugfix/*'
+      - 'feature/*'
+      - 'dev'
+      - 'master'
+  pull_request:
 
 jobs:
   build:
@@ -26,7 +37,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn -B verify
+        run: ${{ github.event.inputs.maven_command }}
       - name: Publish Test Report
         uses: dorny/test-reporter@v1
         if: always()
