refactoring github workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ on:
       maven_command:
         required: true
         type: string
-#    secrets:
+        default: 'mvn -B verify'
+  #    secrets:
 #      personal_access_token:
 #        required: true
   push:
