--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: ${{ github.event.inputs.maven_command }}
+        run: ${{ inputs.maven_command }}
       - name: Publish Test Report
         uses: dorny/test-reporter@v1
         if: always()
