--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,48 +1,14 @@
 name: Build and Test
 
 on:
-  workflow_call:
-    inputs:
-      maven_command:
-        required: true
-        type: string
-        default: 'mvn -B verify'
-  #    secrets:
-#      personal_access_token:
-#        required: true
   push:
     branches:
       - 'bugfix/*'
       - 'feature/*'
-      - 'dev'
-      - 'master'
   pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'adopt'
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Build with Maven
-        run: ${{ inputs.maven_command }}
-      - name: Publish Test Report
-        uses: dorny/test-reporter@v1
-        if: always()
-        with:
-          name: Maven Tests
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: true
+    uses: ./.github/workflows/build-template.yml
+    with:
+      maven_command: 'mvn -B verify'
