--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -12,10 +12,16 @@ jobs:
       maven_command: 'mvn -B verify'
   docker:
     runs-on: ubuntu-latest
+    needs: build
     env:
       DOCKER_IMAGE: fred4jupiter/fredbet
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
     steps:
+      - name: Download jar file
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{needs.build.outputs.jar-file-id}}
+          path: target
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
