--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Download jar file
         uses: actions/download-artifact@v4
         with:
-          name: ${{needs.build.outputs.jar-file-id}}
+          run-id: ${{needs.build.outputs.jar-file-id}}
+          name: 'fredbet jar file'
           path: target
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
