--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           run-id: ${{needs.build.outputs.jar-file-id}}
-          name: 'fredbet jar file'
+          name: fredbet.jar
           path: target
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
