--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -17,12 +17,12 @@ jobs:
       DOCKER_IMAGE: fred4jupiter/fredbet
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
     steps:
-      - name: Download jar file
-        uses: actions/download-artifact@v4
-        with:
-          name: fredbet.jar
-          run-id: ${{needs.build.outputs.jar_file_id}}
-          path: target
+#      - name: Download jar file
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: fredbet.jar
+#          run-id: ${{needs.build.outputs.jar_file_id}}
+#          path: target
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
