--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -17,6 +17,8 @@ jobs:
       DOCKER_IMAGE: fred4jupiter/fredbet
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
     steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4
       - name: Download jar file
         uses: actions/download-artifact@v4
         with:
