--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,3 +12,4 @@ jobs:
     uses: ./.github/workflows/build-template.yml
     with:
       maven_command: 'mvn -B verify'
+      upload_artifact: false
