--- a/.github/workflows/publish-release-manual.yml
+++ b/.github/workflows/publish-release-manual.yml
@@ -9,41 +9,26 @@ on:
         default: '4.1.1'
 
 jobs:
-  build_tag_repo:
+  build:
+    uses: ./.github/workflows/build-template.yml
+    with:
+      maven_command: 'mvn -Drevision=${{ github.event.inputs.release_version }} -B verify'
+      upload_artifact: true
+  docker:
     runs-on: ubuntu-latest
+    needs: build
     env:
       DOCKER_IMAGE: fred4jupiter/fredbet
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
-#    outputs:
-#      release_version: ${{steps.version_update.outputs.release-version}} # use in jobs: ${{needs.build_tag_repo.outputs.release_version}}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - name: Download jar file
+        uses: actions/download-artifact@v4
         with:
-          java-version: '21'
-          distribution: 'adopt'
-          cache: 'maven'
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Build with Maven
-        run: mvn -Drevision=${{ github.event.inputs.release_version }} -B verify
-      - name: Publish Test Report
-        uses: dorny/test-reporter@v1
-        if: always()
-        with:
-          name: Maven Tests
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: true
-      - name: Print release version
-        run: "echo 'New release version: ${{ github.event.inputs.release_version }}'"
+          name: fredbet.jar
+          run-id: ${{needs.build.outputs.jar_file_id}}
+          path: target
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
