--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: 'adopt'
+          distribution: 'temurin'
       - name: Cache local Maven repository
         uses: actions/cache@v4
         with:
