favourite country changes dynamically on team bundle

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <groupId>nz.net.ultraq.thymeleaf</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.wimdeblauwe</groupId>
+            <artifactId>htmx-spring-boot</artifactId>
+            <version>3.6.0</version>
+        </dependency>
 
         <!-- webjars -->
         <dependency>
