--- a/Dockerfile-single
+++ b/Dockerfile-single
@@ -1,12 +1,13 @@
 FROM eclipse-temurin:21-jre-jammy
 LABEL maintainer="Michael Staehler"
 
-VOLUME /tmp
+WORKDIR /
 
-ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
+ENV JAVA_TOOL_OPTIONS="-Duser.timezone=Europe/Berlin"
 
 EXPOSE 8080
 
 COPY target/fredbet.jar fredbet.jar
 
-CMD exec java $JAVA_OPTS -jar fredbet.jar
+ENTRYPOINT ["java", "-jar", "fredbet.jar"]
+CMD ["exec"]
