--- a/extra/docker-compose/mariadb/docker-compose.yml
+++ b/extra/docker-compose/mariadb/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3"
-
 services:
   mariadb:
-    image: mariadb:10.1.11
+    image: mariadb:12.0
     volumes:
-      - "./mariadb:/var/lib/mysql"
+      - database_data:/var/lib/mysql
     environment:
      - MYSQL_DATABASE=fredbetdb
      - MYSQL_ROOT_PASSWORD=secred
@@ -22,3 +20,6 @@ services:
      - SPRING_DATASOURCE_USERNAME=fred
      - SPRING_DATASOURCE_PASSWORD=fred
      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver
+
+volumes:
+  database_data:
