--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: hadolint/hadolint-action@v3.3.0
         with:
-          dockerfile: Dockerfile-single
+          dockerfile: Dockerfile
       - name: Set up JDK
         uses: actions/setup-java@v5
         with:
