update Dockerfile for best practive

--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -1,5 +1,5 @@
 # Step : Test and package
-FROM maven:3.9-eclipse-temurin-21 as builder
+FROM maven:3.9-eclipse-temurin-21 AS builder
 WORKDIR /build
 COPY pom.xml .
 
