--- a/Dockerfile-layered
+++ b/Dockerfile-layered
@@ -1,4 +1,7 @@
-FROM maven:3.9-eclipse-temurin-21 as builder
+FROM maven:3.9-eclipse-temurin-21 AS builder
+
+WORKDIR /
+
 COPY pom.xml .
 
 COPY src/ /src/
@@ -9,8 +12,11 @@ COPY /target/fredbet.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM eclipse-temurin:21-jre-jammy
+
+WORKDIR /
+
 COPY --from=builder dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
 COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
