selecting bootswatch theme per user

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ logging:
   level:
     root: "WARN"
     "org.springframework.web": "WARN"
-    "org.springframework.security": "WARN"
+    "org.springframework.security": "DEBUG"
     "de.fred4jupiter.fredbet": "INFO"
 
 # -------- fredbet properties ------------------------------------------------------------------------------
