do not trigger pipeline on changes in the pipeline itself

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build and Test
 
 on:
   push:
+    paths-ignore:
+      - '.github/**'
     branches:
       - 'bugfix/*'
       - 'feature/*'
