update spring boot to version 4.0.2; added mappings for nullable

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     generate-ddl: false
     show-sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     open-in-view: true
   liquibase:
     enabled: true
